[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-folium"
version = "0.1.0"
description = "Allows using folium with no internet connection. Fork of repo by Robin Wilson"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
  { name = "Cassandra Pate", email = "patecassandra@gmail.com" }
]
urls = { Homepage = "https://github.com/patecm/offline_folium" }
dependencies = [
  "folium>=0.14",
  "setuptools<81",
  "requests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
# (optional) if you only ever want the offline_folium package:
# include = ["offline_folium*"]

[tool.setuptools.package-data]
offline_folium = ["local/**/*"]
# offline_folium = ["local/*"]
