[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-folium"
version = "0.1.0"
description = "Use folium maps without an internet connection"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
  { name = "Cassandra Pate", email = "patecassandra@gmail.com" }
]
urls = { Homepage = "https://github.com/patecm/offline_folium" }
dependencies = [
  "folium>=0.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["offline_folium*"]

[tool.setuptools.package-data]
offline_folium = ["local/**/*"]
